[package]
name = "p-rudis"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.0"
chrono = "0.4.40"
fern = { version = "0.7.1", features = ["colored"] }
tokio = { version = "1.44.0", features = ["full"] }
log = "0.4.27"
atoi = "2.0.0"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
lazy_static = "1.5.0"
